--- a/src/App.css
+++ b/src/App.css
@@ -8,25 +8,22 @@
 }
 
 .header {
-  max-width: 100%;
-  margin: 0 auto;
+  background: #100f10;
+  border: 1px solid #8739f9;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
-  background: #100f10;
-  /* border: 1px solid #8739f9; */
+  gap: 1.5rem;
   box-shadow: -1px 3px 8px 4px rgba(135, 57, 249, 0.83);
 }
 
 .app-name {
   width: 80%;
-  margin-top: 1rem;
   margin-left: 1.5rem;
-  color: #d9d9d9;
+  color: #fff;
   font-family: Brush Script MT, Brush Script Std, cursive;
   font-size: 2rem;
   font-weight: 800;
-  text-decoration: underline #d9d9d9;
+  text-decoration: underline #fff;
   display: flex;
   gap: 1rem;
 }
