--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,24 @@
   width: 80%;
   /* background: red; */
 }
+.msg {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-size: 1rem;
+  color: #6e767d;
+  font-weight: 200;
+  text-align: center;
+  overflow-y: none;
+}
+.error {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-size: 1rem;
+  color: red;
+  font-weight: 200;
+  text-align: center;
+  overflow-y: none;
+}
 
 .progress-bar {
   height: 5px;
@@ -76,14 +94,17 @@
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 1rem;
+  grid-column-gap: 0.1rem;
   grid-row-gap: 1rem;
   /* background: red; */
 }
+
 .img-wrap {
   width: 90%;
-  height: 15rem;
+  height: 17rem;
   /* background: green; */
+  opacity: 0.8;
+  cursor: pointer;
 }
 img {
   width: 100%;
@@ -112,6 +133,24 @@ label input {
   cursor: pointer;
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #00000080;
+}
+
+.backdrop img {
+  display: block;
+  max-width: 60%;
+  max-height: 80%;
+  margin: 60px auto;
+  box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.5);
+  border: 3px solid white;
+}
+
 @media screen and (max-width: 480px) {
   body::-webkit-scrollbar {
     display: none;
@@ -135,5 +174,13 @@ label input {
   .img-wrap {
     width: 95%;
     height: 8rem;
+  }
+  .backdrop img {
+    display: block;
+    max-width: 80%;
+    max-height: 40%;
+    margin: 15rem auto;
+    box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.5);
+    border: 3px solid white;
   }
 }
