--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,10 @@ label input {
   .title {
     font-size: 20px;
   }
+  .app-name {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Helvetica, Arial, sans-serif;
+  }
   .title p {
     font-size: 1rem;
   }
