--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,11 @@
   /* background: red; */
   margin-left: 1.5rem;
   color: #fff;
-  font-family: Brush Script MT, Brush Script Std, cursive;
-  font-size: 2rem;
-  font-weight: 800;
-  text-decoration: underline #fff;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
+  font-size: 1.8rem;
+  font-weight: 500;
+
   display: flex;
   gap: 1rem;
 }
